Fix help tooltip wrapping

--- a/src/customOptionsForm/styles.scss
+++ b/src/customOptionsForm/styles.scss
@@ -100,6 +100,7 @@
         padding: 2px 4px;
         width: max-content;
         max-width: 430px;
+        white-space: initial;
       }
     }
   }
